--- a/apps/gitness/index.html
+++ b/apps/gitness/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/styles.css" />
+    <link rel="icon" type="image/x-icon" href="/harness.svg" />
+
     <title>Gitness 2.0</title>
     <!-- apiurl -->
   </head>
