--- a/apps/gitness/index.html
+++ b/apps/gitness/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/styles.css" />
-    <title>Gitness 2.0</title>
+    <title>Harness Open Source</title>
     <!-- apiurl -->
   </head>
   <body>
