--- a/apps/gitness/index.html
+++ b/apps/gitness/index.html
@@ -5,16 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Basic favicon -->
-    <link rel="icon" type="image/x-icon" href="/harness.ico" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/harness-16x16.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/harness-32x32.png" />
-
-    <!-- For iOS devices -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/harness-apple-touch-icon-180x180.png" />
-
-    <!-- For Android devices -->
-    <link rel="icon" type="image/png" sizes="192x192" href="/harness-android-chrome-192x192.png" />
-    <link rel="icon" type="image/png" sizes="512x512" href="/harness-android-chrome-512x512.png" />
+    <link rel="icon" type="image/x-icon" href="/harness-favicon.ico" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/harness-favicon.png" />
 
     <link rel="stylesheet" href="/styles.css" />
     <title>Harness Open Source</title>
